rp label latest deployed s4 hana v0.1

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -25,6 +25,20 @@
           "odataVersion": "2.0"
         }
       }
+    },
+    "crossNavigation": {
+      "inbounds": {
+        "ratingplates-manage": {
+          "semanticObject": "ratingplates",
+          "action": "manage",
+          "title": "{{ratingplates-manage.flpTitle}}",
+          "subTitle": "{{ratingplates-manage.flpSubtitle}}",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        }
+      }
     }
   },
   "sap.ui": {
