recent changes deployed for client testing

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -93,6 +93,11 @@
         "dataSource": "ZSRVB_LOFTWARE_SERVICES",
         "preload": true,
         "settings": {}
+      },
+      "configurationModel": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {},
+        "preload": false
       }
     },
     "resources": {
