--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -98,6 +98,11 @@
         "type": "sap.ui.model.json.JSONModel",
         "settings": {},
         "preload": false
+      },
+      "fieldMappingModel": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {},
+        "preload": false
       }
     },
     "resources": {
